--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
-asgiref==3.6.0
-Django==4.2
-django-debug-toolbar==4.0.0
+asgiref==3.5.2
+certifi==2023.7.22
+Django==4.1.6
+django-debug-toolbar==4.2.0
 django-filter==22.1
 djangorestframework==3.14.0
+gunicorn==21.2.0
+packaging==23.1
 Pillow==9.4.0
 pytz==2022.7.1
+sentry-sdk==1.29.2
 sqlparse==0.4.2
+typing_extensions==4.7.1
+urllib3==2.0.4
