--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Николай Война <nikolajvojna53@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-django = "^4.2.0"
+django = "4.2.0"
 django-rest-framework = "^0.1.0"
 gunicorn = "^21.2.0"
 pillow = "^10.0.0"
