--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,9 +5,9 @@ services:
     build:
       dockerfile: ./Dockerfile
     command:
-      - gunicorn
-      - mysite.wsgi:application
-      - --bind
+      - "gunicorn"
+      - "mysite.wsgi:application"
+      - "--bind"
       - "0.0.0.0:8000"
     ports:
       - "8000:8000"
